# tree-sitter-xml

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-xml.pc  tree-sitter.json
bindings/c/: tree-sitter-xml.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_xml/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterXMLTests/: TreeSitterXMLTests.swift
corpus/: main.txt
examples/: deeply-nested.xml
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc  tag.h
